<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/item_home"/>

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_store"
            android:title="@string/item_products"/>

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/item_cart"/>

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_truck"
            android:title="@string/item_orders"/>

        <item
            android:id="@+id/nav_invoices"
            android:icon="@drawable/ic_file_document"
            android:title="@string/item_invoices"/>

        <!-- Settings sections -->

        <item
            android:id="@+id/configuration_section"
            android:title="@string/item_settings">

            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/item_log_out"/>
            </menu>

        </item>
    </group>
</menu>